# veripatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md  release-consensus.schema.json
agentmesh/: pyproject.toml
agentmesh/agentmesh/: __init__.py  __main__.py  bootstrap.py  cli.py  console.py  interactive.py  launcher.py  paths.py  protocol.py  scheduler.py  selection.py  workflows.py
agentmesh/agentmesh/agent/: __init__.py  brain.py  llm_client.py  prompts.py  spec.py  worker.py
agentmesh/agentmesh/agents/: backend-architect.md  code-reviewer.md  devops-automator.md  reality-checker.md  technical-writer.md
agentmesh/agentmesh/bus/: __init__.py  base.py  file_bus.py  memory_bus.py
agentmesh/agentmesh/runtime/: __init__.py  registry.py
agentmesh/docs/: AGENTMESH.md
agentmesh/scripts/: bootstrap-dev.ps1  start-llm-development.ps1
agentmesh/tests/: conftest.py  test_brain_llm.py  test_bus_routing.py  test_cli_interactive.py  test_console.py  test_cross_comm_e2e.py  test_file_bus_workflow.py  test_prompt_compliance.py  test_protocol.py  test_registry.py  test_registry_extra.py  test_scheduler_parallel.py  test_selection.py  test_worker_loop.py
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/veripatch/: __init__.py  __main__.py  config.py
backend/veripatch/detection/: __init__.py  os_detect.py
backend/veripatch/execution/: __init__.py  parsers.py  runner.py
backend/veripatch/ipc/: __init__.py  client.py  protocol.py  rpc_cli.py  server.py  socket_server.py
backend/veripatch/observability/: __init__.py  diagnostics.py  logging_config.py
backend/veripatch/privileges/: __init__.py  audit.py  elevation.py
backend/veripatch/sources/: __init__.py  registry.py  validator.py
backend/veripatch/updaters/: __init__.py  base.py  linux.py  macos.py  windows.py
docs/: ARCHITECTURE.md  RELEASE.md  SOURCE_POLICY.md
governance/: POLICY.md  QUALITY_GATES.md
gui/: .busted  .luacheckrc  main.lua
scripts/: build-icon.py  build-release-zip.ps1  build-windows-installer.ps1  check-governance-timestamps.py  create-shortcut.ps1  run-compile-gate.py  start-gui.ps1  (+11 more)
(+73 files in other folders)
