[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh"
version = "0.1.0"
description = "Asyncio multi-agent system with structured cross-agent messaging"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentMesh Contributors" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
agentmesh = "agentmesh.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentmesh*"]

[tool.coverage.run]
omit = ["agentmesh/__main__.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=agentmesh --cov-fail-under=75"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
