[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veripatch"
version = "0.1.0"
description = "Cross-platform official-source system update utility backend"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VeriPatch Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
veripatch = "veripatch.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["veripatch*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
addopts = "-v --tb=short --cov=veripatch --cov-fail-under=75"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
